Fixes issue with autozoom on safari

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
+    font-size: 25px;
 }
 
 .expected-container {
@@ -24,8 +24,7 @@ body {
 }
 
 input[type='text'],
-input[type='number'],
-textarea {
-  font-size: 16px;
-  border-width: 0 0 1px 0;
+input[type='number']{
+    font-size: 25px;
+    font-family: 'Montserrat', sans-serif;
 }
